@@ -39,6 +39,7 @@
 	  incoming connection
 	* added more detailed instrumentation of the disk I/O thread
 
+	* restored default fail_limit to unlimited on all trackers
 	* fixed rate limit bug for DHT
 	* fixed SOCKS5 bug for routing UDP packets
 	* fixed bug on windows when verifying resume data for a torrent where
